# trivial_dep

./: CMakeLists.txt  README.md  trivial_dep.cc  trivial_dep.h
